# webbuddy

./: .env.example  .gitignore  QUICKSTART.md  README.md  SERVICE_ACCOUNTS.md  WORKER_SERVICE.md  manage.py  pyproject.toml  requirements.txt  settings.py  settings_local.py.example
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/layout/: Layout.css  Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/auth/: AuthPages.css  ChangePasswordPage.tsx  LoginPage.tsx
frontend/src/pages/queries/: CreateQueryPage.tsx  QueryDetailPage.tsx  QueryHistoryPage.tsx  QueryPages.css
frontend/src/pages/settings/: SettingsPage.css  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
projects/: admin.py  models.py  serializers.py  views.py
projects/migrations/: 0001_initial.py
queries/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  urls_web.py  utils.py  views.py
queries/migrations/: 0001_initial.py  0002_initial.py  0003_query_query_started.py
templates/: base.html
templates/queries/: create.html  detail.html  history.html
templates/users/: change_password.html  login.html
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_service_account.py  reset_service_password.py
users/migrations/: 0001_initial.py  0002_user_role.py
webbuddy/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
